<resources>
    <string name="app_name">RoomApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="string_salvar">Salvar</string>
    <string name="string_nome">Nome</string>
    <string name="string_email">Email</string>
    <string name="string_inserir">Inserir</string>
    <string name="string_listar">Listar</string>
    <string name="string_id">id</string>
    <string name="string_atualizar">Atualizar</string>
    <string name="string_titulo">Titulo</string>
</resources>
