<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.UpdateActivity">

    <TextView
        android:id="@+id/editIdUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="68dp"
        android:ems="10"
        android:text="@string/string_id"
        app:layout_constraintBottom_toTopOf="@+id/editNomeUpdate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.356"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editNomeUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/string_nome"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/editIdUpdate"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editEmailUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:ems="10"
        android:hint="@string/string_email"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/btnAtualizar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextFields" />

    <Button
        android:id="@+id/btnAtualizar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="43dp"
        android:text="@string/string_atualizar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>